# music-genie

./: .ai-disclaimer.json  README.md  pyproject.toml
src/music_genie/: cli.py  config.py
src/music_genie/audio/: identify.py  record.py
src/music_genie/metadata/: embed.py  lookup.py
src/music_genie/queue/: store.py
src/music_genie/ui/: display.py  prompts.py
src/music_genie/youtube/: download.py  search.py
