[project]
name = "music-genie"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "yt-dlp>=2024.1",
    "shazamio>=0.4",
    "questionary>=2.0",
    "imageio-ffmpeg>=0.5",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "musicbrainzngs>=0.7",
    "mutagen>=1.47",
    "audioop-lts>=0.2; python_version >= '3.13'",
]

[project.scripts]
music-genie = "music_genie.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/music_genie"]
