[project]
name = "music-genie"
description = "Search YouTube for music, identify songs, download as tagged MP3s"
version = "0.1.0"
license = { text = "MIT" }
authors = [
    { name = "j23n", email = "oss@j23n.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "yt-dlp>=2024.1",
    "shazamio>=0.4",
    "questionary>=2.0",
    "imageio-ffmpeg>=0.5",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "musicbrainzngs>=0.7",
    "mutagen>=1.47",
    "audioop-lts>=0.2; python_version >= '3.13'",
]

[project.urls]
Repository = "https://app.radicle.xyz/nodes/rosa.radicle.xyz/rad:z2CgFZe38apoEsFyrk3jSJF2B96Zx"

[project.scripts]
music-genie = "music_genie.cli:app"
mg = "music_genie.cli:app"

[build-system]
requires = ["uv_build>=0.10.2,<0.11"]
build-backend = "uv_build"
